Fix header and footer layout bugs

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -253,8 +253,9 @@ body {
 @media screen and (max-width: 480px) {
   .menu-btn {
     position: absolute;
-    top: 5px;
+    top: 2px;
     right: 0;
+    z-index: 1;
     display: inline-block;
     margin: 0;
     padding: 0;
@@ -279,7 +280,7 @@ body {
 }
 @media screen and (max-width: 480px) {
   .menu-btn {
-    right: 20px;
+    right: 5px;
   }
 }
 
@@ -353,8 +354,8 @@ body {
 @media screen and (max-width: 480px) {
   .content-page .header .menu-main.expanded {
     top: 50px;
-    left: 0;
-    right: 0;
+    left: -25px;
+    right: -25px;
     min-width: 0;
     margin-bottom: 40px;
     -webkit-box-shadow: none;
@@ -871,7 +872,6 @@ body {
 }
 @media screen and (max-width: 480px) {
   .content-page .header-top {
-    padding: 0 15px;
     min-height: 30px;
   }
 }
@@ -879,6 +879,8 @@ body {
 .header-options {
   position: absolute;
   top: 25px;
+  width: 50%;
+  text-align: right;
 }
 .front-page .header-options {
   right: 30px;
@@ -1095,6 +1097,18 @@ body {
 }
 .search-btn:focus {
   outline: none;
+}
+@media screen and (max-width: 480px) {
+  .search-btn {
+    position: relative;
+    top: 1px;
+  }
+  .front-page .search-btn {
+    right: 0;
+  }
+  .common-page .search-btn {
+    right: 40px;
+  }
 }
 
 /* FORMS */
@@ -1456,9 +1470,12 @@ body {
   margin: 0 auto;
   padding: 0 25px;
 }
-.footer .content-formatted {
+.footer .content-formatted,
+.footer .voog-reference {
   display: table-cell;
   vertical-align: middle;
+}
+.footer .content-formatted {
   width: 590px;
   margin: 0 auto;
   text-align: center;
@@ -1487,8 +1504,6 @@ body {
   color: black;
 }
 .footer .voog-reference {
-  display: table-cell;
-  vertical-align: middle;
   width: 60px;
   padding-left: 20px;
 }
@@ -1517,4 +1532,12 @@ body {
   opacity: 1;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   filter: alpha(opacity=100);
+}
+@media screen and (max-width: 480px) {
+  .footer .wrap,
+  .footer .content-formatted,
+  .footer .voog-reference {
+    display: block;
+    width: auto;
+  }
 }
